# CodeDiffAnalyzer

./: .gitignore  LICENSE  README.md  pyrightconfig.json
go-server/: README.md  go.mod  go.sum
go-server/cmd/server/: main.go
go-server/internal/parser/: ast.go
go-server/internal/rpc/: client.go
go-server/internal/web/: handler.go
go-server/proto/analyzerpb/: analyzer.pb.go  analyzer_grpc.pb.go  doc.go
go-server/static/js/: canvas.js
go-server/templates/: index.html
go-server/templates/layouts/: base.html
go-server/templates/partials/: progress.html  result.html
proto/: analyzer.proto
python-engine/: README.md  pyproject.toml  pyrightconfig.json
python-engine/core/: analyzer_pb2.py  analyzer_pb2.pyi  analyzer_pb2_grpc.py  diff_algo.py  graph_algo.py
python-engine/server/: grpc_server.py
python-engine/tests/: mock_data.py  test_diff.py  test_graph.py
