[project]
name = "python-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "protobuf>=6.33.6",
    "zss>=1.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
